# HERD

./: .env.example  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ROLES.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  auth.ts  client.ts  inventory.ts  reservations.ts
frontend/src/components/admin/: CreateDeviceForm.tsx  UserManagementTable.tsx
frontend/src/components/equipment-browser/: EquipmentBrowser.tsx
frontend/src/components/reservations/: CreateReservationModal.tsx  ReservationPanel.tsx
frontend/src/components/topology-editor/: TopologyEditor.tsx
frontend/src/components/topology-editor/edges/: LayerEdge.tsx
frontend/src/components/topology-editor/nodes/: DeviceNode.tsx
frontend/src/components/ui/: ConfirmDialog.tsx  ErrorBoundary.tsx  Modal.tsx
frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/stores/: authStore.ts  topologyStore.ts
frontend/src/types/: auth.types.ts  device.types.ts  reservation.types.ts  topology.types.ts
infra/postgres/: init.sql
infra/traefik/: traefik.yml
services/acl/: pyproject.toml
services/acl/app/: main.py
services/auth/: Dockerfile  conftest.py  pyproject.toml
services/auth/app/: config.py  main.py
services/auth/app/dependencies/: auth.py
services/auth/app/models/: user.py
services/auth/app/routers/: admin.py  auth.py
services/auth/app/schemas/: auth.py
services/auth/app/services/: auth_service.py
services/auth/app/utils/: jwt.py
services/auth/migrations/: env.py
services/auth/migrations/versions/: 0001_initial.py
services/auth/tests/: test_auth.py
services/cabling/: Dockerfile  conftest.py  pyproject.toml
services/cabling/app/: config.py  main.py
services/cabling/tests/: test_connections.py
services/common/: pyproject.toml
services/common/herd_common/: auth.py  enums.py  logging.py
services/inventory/: Dockerfile  conftest.py  pyproject.toml
services/inventory/app/: config.py  main.py
services/inventory/app/dependencies/: auth.py
services/inventory/app/models/: device.py
services/inventory/app/routers/: devices.py
services/inventory/app/schemas/: device.py
services/inventory/app/services/: inventory_service.py
services/inventory/migrations/: env.py
services/inventory/migrations/versions/: 0001_initial.py
services/inventory/tests/: test_devices.py
services/reservations/: Dockerfile  conftest.py  pyproject.toml
services/reservations/app/: config.py  main.py
services/reservations/app/dependencies/: auth.py
services/reservations/app/models/: reservation.py
services/reservations/app/routers/: reservations.py
services/reservations/app/schemas/: reservation.py
services/reservations/app/services/: reservation_service.py
services/reservations/app/tasks/: expiration.py
services/reservations/migrations/: env.py
services/reservations/migrations/versions/: 0001_initial.py
services/reservations/tests/: test_reservations.py
services/user-profile/: pyproject.toml
services/user-profile/app/: main.py
