[project]
name = "herd-cabling"
version = "0.1.0"
description = "HERD Cabling Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.3.0",
    "herd-common",
]

[tool.uv.sources]
herd-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
