[project]
name = "herd-common"
version = "0.1.0"
description = "Shared utilities for HERD services"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "python-jose[cryptography]>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["herd_common"]
